# img-hash-tools

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-start.sh
docker/: .dockerignore  Dockerfile  qt-installer-noninteractive.qs  start.sh
hash-handler/: CMakeLists.txt  hash-handler.cpp  hash-handler.hpp
kernel/: CMakeLists.txt  kernel.cpp  kernel.hpp
key-frames-extractor/: CMakeLists.txt  demo.cpp  demo.hpp  key-frames-extractor.cpp  key-frames-extractor.hpp  main.cpp
similar-images-finder/: CMakeLists.txt  main.cpp  similar-images-finder.cpp  similar-images-finder.hpp  widget.cpp  widget.hpp  widget.ui
