cmake_minimum_required(VERSION 3.7)
project(img-hash-tools)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if (NOT MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
endif()
include_directories(.)
add_subdirectory(hash-handler)
add_subdirectory(key-frames-extractor)
add_subdirectory(similar-images-finder)
