project(similar-images-finder)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
find_package(Qt6 COMPONENTS Core Widgets REQUIRED)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_executable(${PROJECT_NAME} widget.ui similar-images-finder.hpp similar-images-finder.cpp main.cpp)
target_link_libraries(${PROJECT_NAME} hash-handler Qt6::Core Qt6::Widgets)
